heading and font

--- a/views/ledger.haml
+++ b/views/ledger.haml
@@ -9,7 +9,7 @@
 
   %body
     %h1
-      Your investing account (#{("%.2f" % @end_balance).to_s} available)
+      Your investing account ($#{("%.2f" % @end_balance).to_s} available)
       .small
         08/19/2014 - 10/15/2014
 
