--- a/public/reset.css
+++ b/public/reset.css
@@ -19,6 +19,7 @@ time, mark, audio, video {
 	margin: 0;
 	padding: 0;
 	border: 0;
+  font-family: "Arial", Helveltica, sans-serif;
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
