--- a/public/styles.css
+++ b/public/styles.css
@@ -3,23 +3,67 @@ html {
 }
 
 h1 {
-    font-size: 2em;
-    font-weight: 300;
-    margin: 1em 0;
-    text-align: center;
+  font-size: 2em;
+  font-weight: 300;
+  padding: 20px 0 20px 6%;
+  color: #444;
 }
 
 h1 > .small {
-    font-size: 0.5em;
-    font-weight: 300;
-    color: #999;
+  font-size: 0.5em;
+  font-weight: 300;
+  color: #999;
+  padding-top: 10px;
+}
+
+h3 {
+  background-color: white;
+  padding: 15px 0 15px 3%;
+  color: #6d717d;
+  border-bottom: 2px solid white;
+}
+
+.section {
+  background-color: white;
+  border-top: 1px solid #e8ebed;
+  box-shadow: #777 0 -5px 5px -3px;
+  border-radius: 24px 24px 0 0;
 }
 
 .content {
-    width: 800px;
-    margin: auto;
+  width: 800px;
+  padding-left: 6%;
+  background-color: #f2f4f5;
+  width: 100%;
+  color: #444;
+}
+
+.transaction-content {
+  width: 100%;
+  color: #444;
+  height: 50px;
+  padding: 20px 0 20px 6%;
+}
+
+th {
+  color: #444;
+  padding: 10px;
+  border-bottom: 2px solid #e8ebed;
+  border-top: 2px solid #e8ebed;
+}
+
+td {
+  color: #444;
+  padding: 5px;
+  border-bottom: 1px solid #e8ebed;
+}
+
+@media (max-width:499px) {
+  td.description {
+    display: none;
+  }
 }
 
 table {
-    width: 100%;
+  width: 100%;
 }
