--- a/views/ledger.haml
+++ b/views/ledger.haml
@@ -8,31 +8,63 @@
     %link(rel="stylesheet" href="styles.css")
 
   %body
+    %h3 Your investment account
     %h1
-      Your investing account ($#{("%.2f" % @end_balance).to_s} available)
-      .small
-        08/19/2014 - 10/15/2014
+      $#{("%.2f" % @end_balance).to_s}
+      .small BALANCE
 
-    .content
-      %table
-        %thead
-          %tr
-            %th Date
-            %th Type
-            %th Description
-            %th Amount
-            %th Balance
+    .section
+      %h1
+        Make a transaction
 
-        %tbody
-          - @ledger_data.each do |entry|
+      .transaction-content
+        .transaction-subcontent
+          Type of transaction:
+          %select
+            %option Withdraw
+            %option Deposit
+            %option Transfer
+
+          Destination:
+          %select
+            %option Personal Account
+            %option Account 123
+            %option Account 456
+
+          Amount
+          %input
+
+          %button Submit
+
+        .transaction-subcontent
+          .progress-wrap
+            .progress-bar
+
+    .section
+      %h1
+        Past transactions
+        .small 08/19/2014 - 10/15/2014
+
+      .content
+        %table
+          %thead
             %tr
-              %td
-                = entry.date.to_date.to_s
-              %td
-                = entry.type.capitalize
-              %td
-                = entry.description
-              %td
-                = '$' + ("%.2f" % entry.amount).to_s
-              %td
-                = '$' + ("%.2f" % entry.balance).to_s
+              %th Date
+              %th Type
+              %th Description
+              %th Amount
+              %th Balance
+
+          %tbody
+            - @ledger_data.each do |entry|
+              %tr
+                %td
+                  = entry.date.to_date.to_s
+                %td
+                  = entry.type.capitalize
+                %td.description
+                  = entry.description
+                %td
+                  = '$' + ("%.2f" % entry.amount).to_s
+                %td
+                  = '$' + ("%.2f" % entry.balance).to_s
