--- a/views/ledger.haml
+++ b/views/ledger.haml
@@ -19,26 +19,26 @@
 
       .transaction-content
         .transaction-subcontent
-          Type of transaction:
+          %span Type of transaction:
           %select
             %option Withdraw
             %option Deposit
             %option Transfer
 
-          Destination:
+          %span Destination:
           %select
             %option Personal Account
             %option Account 123
             %option Account 456
 
-          Amount
+          %span Amount
           %input
 
           %button Submit
 
         .transaction-subcontent
           .progress-wrap
-            .progress-bar
+            .progress-bar{:style => "left: #{@percentage}%;"}
 
     .section
       %h1
@@ -68,3 +68,21 @@
                   = '$' + ("%.2f" % entry.amount).to_s
                 %td
                   = '$' + ("%.2f" % entry.balance).to_s
+
+:javascript
+  document.addEventListener("DOMContentLoaded", function(event) { 
+    moveProgressBar();
+  });
+  function moveProgressBar() {
+    console.log("moveProgressBar");
+    var getPercent = ($('.progress-wrap').data('progress-percent') / 100);
+    var getProgressWrapWidth = $('.progress-wrap').width();
+    var progressTotal = getPercent * getProgressWrapWidth;
+    var animationLength = 2500;
+
+    // on page load, animate percentage bar to data percentage length
+    // .stop() used to prevent animation queueing
+    $('.progress-bar').stop().animate({
+      left: progressTotal
+    }, animationLength);
+  };
