--- a/public/styles.css
+++ b/public/styles.css
@@ -9,6 +9,11 @@ h1 {
   color: #444;
 }
 
+h1 > .medium {
+  font-size: 0.5em;
+  color: #6d717d;
+}
+
 h1 > .small {
   font-size: 0.5em;
   font-weight: 300;
@@ -16,18 +21,11 @@ h1 > .small {
   padding-top: 10px;
 }
 
-h3 {
-  background-color: white;
-  padding: 50px 0 5px 3%;
-  color: #6d717d;
-  border-bottom: 1px solid #e7e9eB;
-}
-
 .section {
   background-color: white;
   border-top: 1px solid #e8ebed;
   box-shadow: #777 0 -5px 5px -3px;
-  border-radius: 24px 24px 0 0;
+  border-radius: 14px 14px 0 0;
 }
 
 .content {
@@ -63,7 +61,7 @@ h3 {
 
 .progress-bar {
   width: 100%;
-  height: 50px;
+  height: 10px;
   background: #ddd;
   left: 0;
   position: absolute;
