add gift and edit answers

--- a/views/ledger.haml
+++ b/views/ledger.haml
@@ -26,7 +26,7 @@
             %option Deposit
             %option Transfer
 
-          %span Destination:
+          %span Source/Destination:
           %select
             %option Personal Account
             %option Account 123
